bundled_metadata/force-app/main/default/objects/PepsiCo_Period_Calendar__mdt/PepsiCo_Period_Calendar__mdt.object-meta.xml
<CustomObject>
    <label>PepsiCo Period Calendar</label>
    <pluralLabel>PepsiCo Period Calendars</pluralLabel>
</CustomObject>