bundled_metadata/force-app/main/default/objects/PepsiCo_Period_Calendar__mdt/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>