bundled_metadata/force-app/main/default/objects/PepsiCo_Period_Calendar__mdt/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>